Duration concrete type changed to IXXX types; may be further corrected.
WORK_PLAN has two attributes events and event_wait_states.
Class BOOLEAN_CONTEXT_EXPRESSION missing.
See SPECPROC-2

--- a/docs/UML/classes/boolean_context_expression.adoc
+++ b/docs/UML/classes/boolean_context_expression.adoc
@@ -6,7 +6,7 @@ h|*Class*
 2+^h|*BOOLEAN_CONTEXT_EXPRESSION*
 
 h|*Description*
-2+a|
+2+a|Boolean-valued form of `CONTEXT_EXPRESSION`.
 
 h|*Inherit*
 2+|`CONTEXT_EXPRESSION`
