--- a/docs/task_planning/master.adoc
+++ b/docs/task_planning/master.adoc
@@ -65,6 +65,7 @@ This specification benefited from formal and informal input from the openEHR and
 
 The work reported in this specification has been funded by the following organisations:
 
+* City of Moscow
 * Marand d.o.o., Slovenia
 * DIPS, Norway
 * Ars Semantica, UK
