--- a/docs/task_planning/master05-model_overview.adoc
+++ b/docs/task_planning/master05-model_overview.adoc
@@ -60,6 +60,8 @@ include::{uml_export_dir}/classes/state_variable.adoc[]
 
 include::{uml_export_dir}/classes/context_expression.adoc[]
 
+include::{uml_export_dir}/classes/boolean_context_expression.adoc[]
+
 
 include::{uml_export_dir}/classes/system_call.adoc[]
 
