--- a/docs/tp_vml/master.adoc
+++ b/docs/tp_vml/master.adoc
@@ -20,6 +20,7 @@
 :keywords: task, planning, visual language
 :description: openEHR TP Visual Modelling Language
 :spec_status: TRIAL
+:linkattrs:
 
 //
 // ============================================ Asciidoc PREAMBLE =============================================
