--- a/docs/task_planning/master01-preface.adoc
+++ b/docs/task_planning/master01-preface.adoc
@@ -25,13 +25,13 @@ Related documents include:
 
 == Status
 
-This specification is in the {spec_status} state. The development version of this document can be found at {openehr_task_planning}.
+This specification is in the {spec_status} state. The development version of this document can be found at {openehr_task_planning}[{openehr_domain}/releases/PROC/latest/task_planing.html].
 
 Known omissions or questions are indicated in the text with a 'to be determined' paragraph, as follows:
 [.tbd]
 *TBD*: (example To Be Determined paragraph)
 
-Users are encouraged to comment on and/or advise on these paragraphs as well as the main content.  Feedback should be provided either on the {openehr_technical_list}[technical mailing list], or on the {openehr_jira}/SPECPR/?selectedTab=com.atlassian.jira.jira-projects-plugin:issues-panel[specifications issue tracker].
+Users are encouraged to comment on and/or advise on these paragraphs as well as the main content.  Feedback should be provided either on the {openehr_technical_list}[technical mailing list], or on the {openehr_jira_prs_proc}[specifications issue tracker].
 
 == Conformance
 
