--- a/docs/UML/classes/plan_data_context.adoc
+++ b/docs/UML/classes/plan_data_context.adoc
@@ -19,4 +19,8 @@ a|List of all variables tracked by this Plan.
 h|*0..1*
 |*expressions*: `List<CONTEXT_EXPRESSION>`
 a|List of all expressions used in the Plan, based on tracked variables.
+
+h|*0..1*
+|*constants*: `List<CONTEXT_CONSTANT>`
+a|
 |===
