--- a/docs/task_planning/master00-amendment_record.adoc
+++ b/docs/task_planning/master00-amendment_record.adoc
@@ -4,28 +4,40 @@
 |===
 |Issue|Details|Raiser|Completed
 
-4+^h|*R E L E A S E{nbsp}{nbsp}{nbsp}{nbsp}{nbsp}1.0.0*
+4+^h|*R E L E A S E{nbsp}{nbsp}{nbsp}{nbsp}{nbsp}1.?.?*
 
-|[[latest_issue]]1.0.1
+|[[latest_issue]]1.0.?
+|{openehr_jira}/SPECPROC-3[SPECPROC-3]. Context value model adjustments; +
+ Adjust `CONTEXT_EXPRESSION` type to have `_name_`; +
+ Add `CONTEXT_CONSTANT` type. +
+ {openehr_jira}/SPECPROC-4[SPECPROC-4]. Refine `SYSTEM_CALL` model, describe variable referencing.
+|M Kejžar, +
+ M Polajnar, +
+ T Beale
+|[[latest_issue_date]]02 Dec 2017
+
+|1.0.1
 |{openehr_jira}/SPECPROC-2[SPECPROC-2] Fix various typos; add missed `BOOLEAN_CONTEXT_EXPRESSION`;
  Remove duplicate attribute `WORK_PLAN._events_`.
 |M Kejžar
-|[[latest_issue_date]]24 Oct 2017
+|24 Oct 2017
+
+4+^h|*R E L E A S E{nbsp}{nbsp}{nbsp}{nbsp}{nbsp}1.0.0*
 
 |1.0.0
-|{openehr_jira}/SPECPROC-1[SPECPROC-1] Further documentation improvements;
+|{openehr_jira}/SPECPROC-1[SPECPROC-1]. Further documentation improvements;
  Added explanations for resume semantics; added `RESUME_ACTION` class.
 |T Beale
 |17 Oct 2017
 
 |0.9.0
-|{openehr_jira}/SPECPROC-1[SPECPROC-1] Restructure document;
+|{openehr_jira}/SPECPROC-1[SPECPROC-1]. Restructure document;
  Various refactoring of Event classes; global calendar, timeline.
 |T Beale
 |12 Oct 2017
 
 |0.8.2
-|{openehr_jira}/SPECPROC-1[SPECPROC-1] Workshop Sep 25-28 and follow-up calls; +
+|{openehr_jira}/SPECPROC-1[SPECPROC-1]. Workshop Sep 25-28 and follow-up calls; +
  Significant updates to model; +
  Include event-based design; +
  Moved spec to new PROC openEHR component.
