Changes for SPECPROC-3 and SPECPROC-5 :
Correct DECISION_BRANCH method of specifying value.
Context value model adjustments.

--- a/docs/UML/class_index.adoc
+++ b/docs/UML/class_index.adoc
@@ -68,6 +68,8 @@
 [.xcode]
 * http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_external_request_class[EXTERNAL_REQUEST]
 [.xcode]
+* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_external_variable_class[EXTERNAL_VARIABLE]
+[.xcode]
 * http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_hand_off_class[HAND_OFF]
 [.xcode]
 * http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_i_task_plan_definition_interface[I_TASK_PLAN_DEFINITION]
@@ -79,6 +81,8 @@
 * http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_i_work_plan_materialised_interface[I_WORK_PLAN_MATERIALISED]
 [.xcode]
 * http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_linked_plan_class[LINKED_PLAN]
+[.xcode]
+* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_local_variable_class[LOCAL_VARIABLE]
 [.xcode]
 * http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_manual_notification_class[MANUAL_NOTIFICATION]
 [.xcode]
