--- a/docs/task_planning/master05-model_overview.adoc
+++ b/docs/task_planning/master05-model_overview.adoc
@@ -49,6 +49,8 @@ include::{uml_export_dir}/classes/plan_data_context.adoc[leveloffset=+1]
 
 include::{uml_export_dir}/classes/context_value.adoc[leveloffset=+1]
 
+include::{uml_export_dir}/classes/context_constant.adoc[leveloffset=+1]
+
 include::{uml_export_dir}/classes/context_variable.adoc[leveloffset=+1]
 
 include::{uml_export_dir}/classes/external_variable.adoc[leveloffset=+1]
